colcon_ws/log/build_2022-09-10_05-28-00/dasc_robot/stdout_stderr.log
[ 12%] Built target dascBots
[35m[1mScanning dependencies of target joystick_controller[0m
[ 75%] Built target example_control_geometric_velocity
[ 75%] Built target example_control
[ 75%] Built target example_control_multi_rover
[ 75%] Built target example_control_geometric_acceleration
[ 75%] Built target example_control_geometric
[ 87%] Built target dasc_robot_lib
[ 93%] [32mBuilding CXX object CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o[0m
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::takeoff()’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:60:5: error: ‘target_yaw’ was not declared in this scope; did you mean ‘target_pos’?
   60 |     target_yaw    = 0.0;
      |     ^~~~~~~~~~
      |     target_pos
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::joy_callback(sensor_msgs::msg::Joy_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:119:5: error: ‘target_yaw’ was not declared in this scope; did you mean ‘target_pos’?
  119 |     target_yaw    += cmd_yaw_/10.0;
      |     ^~~~~~~~~~
      |     target_pos
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
